--- a/masterpage/MasterPage2.master
+++ b/masterpage/MasterPage2.master
@@ -13,16 +13,18 @@
 
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link href="../plugins/sweetalert/sweetalert.css" rel="stylesheet" />
-    <link href="../css/style_ship.css" rel="stylesheet" type="text/css" />
     <link href="../css/reset.css" rel="stylesheet" type="text/css" />
     <link href="../css/homestyle.css" rel="stylesheet" type="text/css" />
+    <link href="../css/style_ship.css" rel="stylesheet" type="text/css" />
+    <link href="../css/js.css" rel="stylesheet" type="text/css" />
+
 
     <script src="../../js/jquery.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
     <script src="../../plugins/sweetalert/sweetalert-dev.js"></script>
 
     <style></style>
-    <asp:ContentPlaceHolder id="head" runat="server">
+    <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
@@ -31,16 +33,18 @@
             <div class="sub">
                 <p><a href="#">Home</a></p>
             </div>
-            <div id="logol"><a href="Default.aspx">
-                <img src="images/logo001.gif" alt="Tayana" /></a></div>
+            <div id="logol">
+                <a href="Default.aspx">
+                    <img src="images/logo001.gif" alt="Tayana" /></a>
+            </div>
             <!--------------------------------選單開始---------------------------------------------------->
             <div class="menu">
                 <ul>
-                    <li class="menuli01"><a href="#">Yachts</a></li>
+                    <li class="menuli01"><a href="Yachts.aspx">Yachts</a></li>
                     <li class="menuli02"><a href="News.aspx">NEWS</a></li>
-                    <li class="menuli03"><a href="#">COMPANY</a></li>
-                    <li class="menuli04"><a href="#">DEALERS</a></li>
-                    <li class="menuli05"><a href="#">CONTACT</a></li>
+                    <li class="menuli03"><a href="Company.aspx">COMPANY</a></li>
+                    <li class="menuli04"><a href="Dealers.aspx">DEALERS</a></li>
+                    <li class="menuli05"><a href="Contact.aspx">CONTACT</a></li>
                 </ul>
             </div>
             <!--------------------------------選單開始結束---------------------------------------------------->
