--- a/masterpage/MasterPage2.master
+++ b/masterpage/MasterPage2.master
@@ -17,12 +17,14 @@
     <link href="../css/homestyle.css" rel="stylesheet" type="text/css" />
     <link href="../css/style_ship.css" rel="stylesheet" type="text/css" />
     <link href="../css/js.css" rel="stylesheet" type="text/css" />
+    <link href="../css/loading.css" rel="stylesheet" type="text/css" />
 
 
     <script src="../../js/jquery.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
     <script src="../../plugins/sweetalert/sweetalert-dev.js"></script>
     <script src="../Scripts/ckeditor/ckeditor.js"></script>
+    <script src="../../js/masterpage.js?<%=DateTime.Now.ToString("yyyyMMddmmss")%>"></script>
 
     <style></style>
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -72,7 +74,22 @@
 
 
     </form>
-
+    <div id="loading_div" style="position: fixed; top: 0; width: 100%; height: 100%; display: none; z-index: 999;">
+        <div id="loading" class="sk-circle">
+            <div class="sk-circle1 sk-child"></div>
+            <div class="sk-circle2 sk-child"></div>
+            <div class="sk-circle3 sk-child"></div>
+            <div class="sk-circle4 sk-child"></div>
+            <div class="sk-circle5 sk-child"></div>
+            <div class="sk-circle6 sk-child"></div>
+            <div class="sk-circle7 sk-child"></div>
+            <div class="sk-circle8 sk-child"></div>
+            <div class="sk-circle9 sk-child"></div>
+            <div class="sk-circle10 sk-child"></div>
+            <div class="sk-circle11 sk-child"></div>
+            <div class="sk-circle12 sk-child"></div>
+        </div>
+    </div>
 
 </body>
 </html>
