--- a/masterpage/MasterPage.master
+++ b/masterpage/MasterPage.master
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="icon" href="../images/favicon.png" type="image/png" />
-    <title>大洋遊艇網站</title>
+    <title>手機哥網站</title>
     <!--Begin  Page Level  CSS -->
     <link href="../plugins/morris-chart/morris.css" rel="stylesheet" />
     <link href="../plugins/jquery-ui/jquery-ui.min.css" rel="stylesheet" />
@@ -112,7 +112,7 @@
             <div class="logo">
                 <a href="../../Admin/Default/Default.aspx" style="font-size: medium">
                     <%--<img src="../../images/logo.png" alt="" />--%>
-                大洋遊艇網站
+                手機哥網站
                 </a>
             </div>
 
@@ -125,7 +125,7 @@
             <div class="left-side-inner">
                 <!--Sidebar nav-->
                 <ul class="nav nav-pills nav-stacked custom-nav">
-                    <asp:Repeater ID="Rpt_sidebar" runat="server" OnItemDataBound="Rpt_sidebar_ItemDataBound">
+                    <%--<asp:Repeater ID="Rpt_sidebar" runat="server" OnItemDataBound="Rpt_sidebar_ItemDataBound">
                         <ItemTemplate>
                             <li id="<%# Eval("T_id") %>" class="menu-list"><a href="#"><i class="<%# Eval("T_icon") %>"></i><span><%# Eval("T_name") %></span></a>
                                 <asp:Repeater ID="Rpt_sidebar_detail" runat="server">
@@ -137,14 +137,17 @@
                                 </asp:Repeater>
                             </li>
                         </ItemTemplate>
-                    </asp:Repeater>
+                    </asp:Repeater>--%>
 
-                 <%--   <li id="basic" class="menu-list"><a href="#"><i class="icon-basic"></i><span>基本資料管理</span></a>
+                    <li id="basic" class="menu-list"><a href="#"><i class="icon-basic"></i><span>基本資料管理</span></a>
                         <ul class="sub-menu-list">
-                            <li><a onclick="cookingClaer()" href="../../Admin/Employee/Employee.aspx?type=basic">權限設定</a></li>
+                            <%--<li><a onclick="cookingClaer()" href="../../Admin/Employee/Employee.aspx?type=basic">圖片輪播管理</a></li>--%>
+                            <li><a onclick="cookingClaer()" href="#">圖片輪播管理</a></li>
+                            <li><a onclick="cookingClaer()" href="#">維修案例管理</a></li>
+                            <li><a onclick="cookingClaer()" href="#">維修價目表管理</a></li>
                         </ul>
                     </li>
-                    <li id="news" class="menu-list"><a href="#"><i class="icon-basic"></i><span>最新消息管理</span></a>
+                    <%--<li id="news" class="menu-list"><a href="#"><i class="icon-basic"></i><span>最新消息管理</span></a>
                         <ul class="sub-menu-list">
                             <li><a onclick="cookingClaer()" href="../../Admin/News/News.aspx?type=news">最新消息</a></li>
                         </ul>
