--- a/masterpage/MasterPage.master
+++ b/masterpage/MasterPage.master
@@ -9,7 +9,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="icon" href="../images/favicon.png" type="image/png" />
+    <link rel="icon" href="../images/favicon.ico" type="image/png" />
     <title>大洋遊艇網站</title>
     <!--Begin  Page Level  CSS -->
     <link href="../plugins/morris-chart/morris.css" rel="stylesheet" />
@@ -118,7 +118,7 @@
 
             <div class="logo-icon text-center">
                 <a href="../../Admin/Default/Default.aspx">
-                    <img src="../../images/logo-icon.png" alt="" style="margin-top: 15px;" /></a>
+                    <img src="../../images/logo-icon.gif" alt="" style="margin-top: 15px;" /></a>
             </div>
             <!--logo-->
 
@@ -128,18 +128,20 @@
                     <asp:Repeater ID="Rpt_sidebar" runat="server" OnItemDataBound="Rpt_sidebar_ItemDataBound">
                         <ItemTemplate>
                             <li id="<%# Eval("T_id") %>" class="menu-list"><a href="#"><i class="<%# Eval("T_icon") %>"></i><span><%# Eval("T_name") %></span></a>
-                                <asp:Repeater ID="Rpt_sidebar_detail" runat="server">
-                                    <ItemTemplate>
-                                        <ul class="sub-menu-list">
+                                <ul class="sub-menu-list">
+                                    <asp:Repeater ID="Rpt_sidebar_detail" runat="server">
+                                        <ItemTemplate>
+
                                             <li><a onclick="cookingClaer()" href="<%# Eval("Url") %>"><%# Eval("Td_name") %></a></li>
-                                        </ul>
-                                    </ItemTemplate>
-                                </asp:Repeater>
+
+                                        </ItemTemplate>
+                                    </asp:Repeater>
+                                </ul>
                             </li>
                         </ItemTemplate>
                     </asp:Repeater>
-
-                 <%--   <li id="basic" class="menu-list"><a href="#"><i class="icon-basic"></i><span>基本資料管理</span></a>
+                  
+                    <%--   <li id="basic" class="menu-list"><a href="#"><i class="icon-basic"></i><span>基本資料管理</span></a>
                         <ul class="sub-menu-list">
                             <li><a onclick="cookingClaer()" href="../../Admin/Employee/Employee.aspx?type=basic">權限設定</a></li>
                         </ul>
