--- a/masterpage/MasterPage2.master
+++ b/masterpage/MasterPage2.master
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-
+    <link rel="icon" href="../images/favicon.ico" type="image/png" />
     <title></title>
 
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
