--- a/masterpage/MasterPage.master
+++ b/masterpage/MasterPage.master
@@ -206,7 +206,7 @@
             </div>
 
             <!--Start  Footer -->
-            <footer class="footer-main">Copyright &copy; 2019.Company name All rights reserved.</footer>
+            <footer class="footer-main">Copyright &copy; 2020.Company .</footer>
             <!--End footer -->
         </div>
         <!--End main content -->
